formateo de clases